--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,6 @@ code {
   margin: 0;
   padding: 0;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap');
