--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,11 @@
 }
 
 .jumbotron {
-  background-image: url("../public/assets/images/desertsnake.jpg");
+  background-image: url("../public/assets/images/etherealreptile.JPG");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 40vh;
+  height: 90vh;
   margin: 0;
   margin-bottom: 0 !important;
   padding: 30px;
@@ -56,6 +56,7 @@
   font-size: 8rem;
   margin: 0;
   padding: 0;
+  
 }
 
 .navbar {
@@ -86,18 +87,18 @@ h3, h2, .card-header {
   max-height: 550px;
 }
 
-.carousel {
-  /* max-height: 30rem; */
-  /* max-width: 28rem; */
-  /* height: 30rem; */
-  /* max-width: 20rem; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.carousel-slider > .slider-wrapper{
+  width: 30rem;
+ 
+}
+
+.control-arrow{
+  position: relative;
 }
 
 .contact-carousel{
-  width: 30%;
+  width: 80%;
 }
 
 .card-body{
@@ -108,9 +109,10 @@ h3, h2, .card-header {
   color: #2E3645
 }
 
-.card{
+.shopCard{
   margin-bottom: 3rem;
-  min-height: 550px;
-  max-height: 575px;
+  min-height: 600px;
+  max-height: 650px !important;
+  display: flex;
 }
 
